--- a/Code/Data_Augmentation.ipynb
+++ b/Code/Data_Augmentation.ipynb
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Screenshot_1.jpg)"
+    "![](../Photos/Screenshot_1.jpg)"
    ]
   },
   {
@@ -448,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Screenshot_2.jpg)"
+    "![](../Photos/Screenshot_2.jpg)"
    ]
   },
   {
