--- a/Code/TransferLearning.ipynb
+++ b/Code/TransferLearning.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "**We will use a pre-training model that has been trained by Google with a large dataset and we will use it to our model**<br><br>\n",
     "**In this link you can find various models: https://tfhub.dev/**<br><br>\n",
-    "**We will use this model: https://tfhub.dev/google/tf2-preview/mobilenet_v2/classification/4**<br><br>"
+    "**We will use this model: https://tfhub.dev/google/tf2-preview/mobilenet_v2/classification/4**"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](screenshot_3.jpg)"
+    "![](../Photos/screenshot_3.jpg)"
    ]
   },
   {
@@ -372,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Screenshot_5.jpg)"
+    "![](../Photos/Screenshot_5.jpg)"
    ]
   },
   {
