--- a/Code/TransferLearning.ipynb
+++ b/Code/TransferLearning.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](../Photos/screenshot_3.jpg)"
+    "![](../Photos/screenshot_3.jpg"
    ]
   },
   {
