--- a/Code/TransferLearning.ipynb
+++ b/Code/TransferLearning.ipynb
@@ -38,11 +38,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We set IMAGE_SHAPE = (224, 224) because the model has been trained on images of size 224x224, as mentioned in the picture below.\n",
+    "# We set IMAGE_SHAPE = (224, 224) because the model has been trained on images of size 224x224, as mentioned in the picture \n",
+    "# below\n",
     "IMAGE_SHAPE = (224, 224)\n",
     "\n",
     "# First we create an classifier using the selected model.\n",
-    "# The input shape for the model is specified as IMAGE_SHAPE+(3,), representing images of size 224x224 with three color channels (RGB).\n",
+    "# The input shape for the model is specified as IMAGE_SHAPE+(3,), representing images of size 224x224 with three color \n",
+    "# channels (RGB).\n",
     "classifier = tf.keras.Sequential([\n",
     "    hub.KerasLayer(\"https://tfhub.dev/google/tf2-preview/mobilenet_v2/classification/4\", input_shape=IMAGE_SHAPE+(3,))\n",
     "])"
@@ -464,11 +466,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# That happends because this model has been pre-trained on a large dataset for image classification tasks, so we need to re-train it.\n",
-    "# Below we take the same model except for the last layer, meaning all the Dense layers are frozen so that we can add our output.\n",
+    "# That happends because this model has been pre-trained on a large dataset for image classification tasks, \n",
+    "# so we need to re-train it.\n",
+    "# Below we take the same model except for the last layer, meaning all the Dense layers are frozen so that we can add\n",
+    "# our output.\n",
     "feature_extractor_model = \"https://tfhub.dev/google/tf2-preview/mobilenet_v2/feature_vector/4\"\n",
     "\n",
-    "# We are reconfiguring our pre-trained model and setting the parameter trainable=False, indicating that we do not want it to be trained, in other words, we want to freeze it.\n",
+    "# We are reconfiguring our pre-trained model and setting the parameter trainable=False, indicating that we do not want it to be trained,\n",
+    "# in other words, we want to freeze it.\n",
     "pretrained_model_without_top_layer = hub.KerasLayer(feature_extractor_model, input_shape=(224, 224, 3), trainable=False)"
    ]
   },
